re-do create-react-app with typescript

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.mesh {
+  height: 100vh;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.mesh01 {
+  background: conic-gradient(
+      at 90% 105%,
+      transparent 50%,
+      #ddf469 75%,
+      #ff917b 80%,
+      transparent
+    ),
+    conic-gradient(at 50% -5%, #65ead1 25%, #fcffc1, #f469a9 75%);
+}
