--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,67 @@
-.App {
+/* @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap'); */
+
+body {
+  background: #060606;
   text-align: center;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background {
+  width: 100vw;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -2;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.mesh {
+.background-shade {
+  width: 100vw;
   height: 100vh;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+
 }
 
-.mesh01 {
-  background: conic-gradient(
-      at 90% 105%,
-      transparent 50%,
-      #ddf469 75%,
-      #ff917b 80%,
-      transparent
-    ),
-    conic-gradient(at 50% -5%, #65ead1 25%, #fcffc1, #f469a9 75%);
+h1 {
+  text-align: center;
+  font-family: Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;  color: #181818;
+  font-size: 4rem;
+  margin-top: 10rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+}
+
+.avatar {
+  margin: 1rem 0;
+  border-radius: 50%;
+  width: 300px;
+
+}
+
+@media (prefers-color-scheme: dark) {
+  .background-shade {
+    background: linear-gradient(#060606, 85%, rgba(0,0,0, 0.7));
+  }
+  h1 {
+    color: #fff;
+  }
+  p {
+    color: rgba(255, 255, 255, 0.7);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .background-shade {
+    background: rgba(255, 255, 255, 0.7);
+  }
+  h1 {
+    color: #181818;
+  }
+  p {
+    color: rgba(#181818, 0.7);
+  }
 }
