--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,7 @@ h1 {
   text-align: center;
   font-family: Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;  color: #181818;
   font-size: 4rem;
-  margin-top: 10rem;
-  margin-bottom: 1rem;
+  margin: 1rem;
 }
 
 p {
@@ -37,8 +36,10 @@ p {
 
 .avatar {
   margin: 1rem 0;
+  margin-top: 4rem;
   border-radius: 50%;
   width: 300px;
+  box-shadow: 0px 3px 6px rgba(0,0,0, 0.3);
 
 }
 
